src/objects/Application_Wizard__mdt.object
<CustomObject>
    <fields>
        <fullName>Help__c</fullName>
        <label>Help</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Name__c</fullName>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wizard_Type__c</fullName>
        <defaultValue>&quot;base&quot;</defaultValue>
        <label>Wizard Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>base</fullName>
                    <default>true</default>
                    <label>base</label>
                </value>
                <value>
                    <fullName>path</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application Wizard Template</label>
    <pluralLabel>Application Wizard Template</pluralLabel>
</CustomObject>